--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,9 +19,9 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase sticky-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">aquashdw</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -30,27 +30,44 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
+{#                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>#}
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead bg-primary text-white text-center">
-            <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="{% static 'home/assets/img/avataaars.svg' %}" alt="..." />
-                <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">Start Bootstrap</h1>
-                <!-- Icon Divider-->
-                <div class="divider-custom divider-light">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
+        <header class="container-fluid masthead bg-primary text-white text-center py-lg-5" style="padding-left: 5%; padding-right: 5%;">
+            <div class="row">
+                <div class="profile-image col-lg-5 mt-lg-0 mt-5">
+                    <img class="float-lg-end w-75 rounded-1" src="{% static 'home/assets/img/IMG_0318.jpg' %}" alt="...">
                 </div>
+                <div class="profile-desc col-lg-7 d-flex flex-column justify-content-center my-lg-0 my-5">
+                    <h1 class="masthead-heading mb-0">Jeeho Park</h1>
+                <!-- Icon Divider-->
+                    <div class="divider-custom divider-light">
+                        <div class="divider-custom-line"></div>
+                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                        <div class="divider-custom-line"></div>
+                    </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+                    <p class="masthead-subheading font-weight-light">Java - Python - Kotlin</p>
+                    <p class="masthead-subheading font-weight-light mb-0">Dev & Edu</p>
+                </div>
             </div>
+{#            <div class="container d-flex align-items-center flex-column">#}
+{#                <!-- Masthead Avatar Image-->#}
+{#                <img class="masthead-avatar mb-5" src="{% static 'home/assets/img/avataaars.svg' %}" alt="..." />#}
+{#                <!-- Masthead Heading-->#}
+{#                <h1 class="masthead-heading text-uppercase mb-0">Start Bootstrap</h1>#}
+{#                <!-- Icon Divider-->#}
+{#                <div class="divider-custom divider-light">#}
+{#                    <div class="divider-custom-line"></div>#}
+{#                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>#}
+{#                    <div class="divider-custom-line"></div>#}
+{#                </div>#}
+{#                <!-- Masthead Subheading-->#}
+{#                <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>#}
+{#            </div>#}
         </header>
         <!-- Portfolio Section-->
         <section class="page-section portfolio" id="portfolio">
@@ -140,7 +157,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
+                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/" target="_blank">
                         <i class="fas fa-download me-2"></i>
                         Free Download!
                     </a>
@@ -148,69 +165,69 @@
             </div>
         </section>
         <!-- Contact Section-->
-        <section class="page-section" id="contact">
-            <div class="container">
-                <!-- Contact Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
-                <!-- Icon Divider-->
-                <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
-                </div>
-                <!-- Contact Section Form-->
-                <div class="row justify-content-center">
-                    <div class="col-lg-8 col-xl-7">
-                        <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                            <!-- Name input-->
-                            <div class="form-floating mb-3">
-                                <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                                <label for="name">Full name</label>
-                                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
-                            </div>
-                            <!-- Email address input-->
-                            <div class="form-floating mb-3">
-                                <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
-                                <label for="email">Email address</label>
-                                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
-                            </div>
-                            <!-- Phone number input-->
-                            <div class="form-floating mb-3">
-                                <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
-                                <label for="phone">Phone number</label>
-                                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
-                            </div>
-                            <!-- Message input-->
-                            <div class="form-floating mb-3">
-                                <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
-                                <label for="message">Message</label>
-                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
-                            </div>
-                            <!-- Submit success message-->
-                            <!---->
-                            <!-- This is what your users will see when the form-->
-                            <!-- has successfully submitted-->
-                            <div class="d-none" id="submitSuccessMessage">
-                                <div class="text-center mb-3">
-                                    <div class="fw-bolder">Form submission successful!</div>
-                                    To activate this form, sign up at
-                                    <br />
-                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                </div>
-                            </div>
-                            <!-- Submit error message-->
-                            <!---->
-                            <!-- This is what your users will see when there is-->
-                            <!-- an error submitting the form-->
-                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
-                            <!-- Submit Button-->
-                            <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Send</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
+{#        <section class="page-section" id="contact">#}
+{#            <div class="container">#}
+{#                <!-- Contact Section Heading-->#}
+{#                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>#}
+{#                <!-- Icon Divider-->#}
+{#                <div class="divider-custom">#}
+{#                    <div class="divider-custom-line"></div>#}
+{#                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>#}
+{#                    <div class="divider-custom-line"></div>#}
+{#                </div>#}
+{#                <!-- Contact Section Form-->#}
+{#                <div class="row justify-content-center">#}
+{#                    <div class="col-lg-8 col-xl-7">#}
+{#                        <form id="contactForm" data-sb-form-api-token="API_TOKEN">#}
+{#                            <!-- Name input-->#}
+{#                            <div class="form-floating mb-3">#}
+{#                                <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />#}
+{#                                <label for="name">Full name</label>#}
+{#                                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>#}
+{#                            </div>#}
+{#                            <!-- Email address input-->#}
+{#                            <div class="form-floating mb-3">#}
+{#                                <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />#}
+{#                                <label for="email">Email address</label>#}
+{#                                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>#}
+{#                                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>#}
+{#                            </div>#}
+{#                            <!-- Phone number input-->#}
+{#                            <div class="form-floating mb-3">#}
+{#                                <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />#}
+{#                                <label for="phone">Phone number</label>#}
+{#                                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>#}
+{#                            </div>#}
+{#                            <!-- Message input-->#}
+{#                            <div class="form-floating mb-3">#}
+{#                                <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>#}
+{#                                <label for="message">Message</label>#}
+{#                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>#}
+{#                            </div>#}
+{#                            <!-- Submit success message-->#}
+{#                            <!---->#}
+{#                            <!-- This is what your users will see when the form-->#}
+{#                            <!-- has successfully submitted-->#}
+{#                            <div class="d-none" id="submitSuccessMessage">#}
+{#                                <div class="text-center mb-3">#}
+{#                                    <div class="fw-bolder">Form submission successful!</div>#}
+{#                                    To activate this form, sign up at#}
+{#                                    <br />#}
+{#                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                            <!-- Submit error message-->#}
+{#                            <!---->#}
+{#                            <!-- This is what your users will see when there is-->#}
+{#                            <!-- an error submitting the form-->#}
+{#                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>#}
+{#                            <!-- Submit Button-->#}
+{#                            <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Send</button>#}
+{#                        </form>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </section>#}
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container">
@@ -219,26 +236,26 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
-                            2215 John Daniel Drive
+                            대한민국, Republic of Korea
                             <br />
-                            Clark, MO 65243
+                            경기도 성남시 분당구
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-dribbble"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-github"></i></a>
+{#                        <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-facebook-f"></i></a>#}
+{#                        <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-twitter"></i></a>#}
+{#                        <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-linkedin-in"></i></a>#}
+{#                        <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-dribbble"></i></a>#}
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">About Freelancer</h4>
+                        <h4 class="text-uppercase mb-4">템플릿 정보</h4>
                         <p class="lead mb-0">
-                            Freelance is a free to use, MIT licensed Bootstrap theme created by
-                            <a href="http://startbootstrap.com">Start Bootstrap</a>
-                            .
+                            본 페이지는 <a href="http://startbootstrap.com" target="_blank">Start Bootstrap</a>
+                            에서 제공하는 Freelance 테마를 이용하여 제작되었습니다.
                         </p>
                     </div>
                 </div>
@@ -246,7 +263,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Your Website 2021</small></div>
+            <div class="container"><small>Copyright &copy; aquashdw</small></div>
         </div>
         <!-- Portfolio Modals-->
         <!-- Portfolio Modal 1-->
@@ -445,10 +462,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="{% static 'home/js/scripts.js' %}"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+
     </body>
 </html>
